@@ -111,10 +111,9 @@
 
                 <tal:progressbar define="
                          worked task/getWorkedHours;
-                         estimated task/getEstimatedDuration; 
                          URL task/getURL;
                          remaining task/getRemainingTime;
-                         bar nocall:context/@@smallprogressbar">  
+                         bar nocall:context/@@smallprogressbar">
                 <a tal:replace="structure python:bar(URL=URL,remaining=remaining,  worked=worked)">
                 </a>  
         </tal:progressbar>
