@@ -54,29 +54,13 @@
         <p style="text-align : right">
             <a tal:attributes="href string:${here/absolute_url}/add_work_hours"><img tal:replace="structure here/hour_icon.gif" /> Register work hours</a>
         </p>
-        
-        
-     
-    
-        
 
     <fieldset>
-            <legend>Status/Edit</legend>
-           
+        <legend>Status/Edit</legend>
         <div>
-            
-       
+
         <table class="vertical listing" style="width: 38%; float: right;margin: 1em 0.5em">
-            
             <tbody>
-                <tr>
-                    <th>Estimated work</th>
-                    <td ondblclick="showhiddenfield(this)">
-                         <input type="text" class="invisibleformnode" name="estimatedDuration" 
-                                tal:attributes="value here/getRawEstimatedDuration" />
-                        <span class="formvaluenode"><span tal:content="here/getEstimatedDuration" /> hours  </span>
-                    </td>
-                </tr>
                  <tr>
                     <th>
                         Participants
